--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push the API to ECR
-      if: ${{ github.event.inputs.create_kbs_api }} == 'true'
+      if: ${{ github.event.inputs.create_kbs_api }}
       id: build-push-API
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -59,7 +59,7 @@ jobs:
         docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         echo "::set-output name=image::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
     - name: Build, tag, and push the Web to ECR
-      if: ${{ github.event.inputs.create_kbs_web }} == 'true'
+      if: ${{ github.event.inputs.create_kbs_web }}
       id: build-push-Web
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
