builk order additional reminder email included for notification

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -35,6 +35,7 @@
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
+    "InValidBulkOrderReminderSubject": "Reminder from The National Archives: Don't forget to complete your document order",
     "LoopSendDelay": "10"
   }
 }
