--- a/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
+++ b/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
@@ -1,23 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>book_a_reading_room_visit.api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="C:\Users\boreilly\.nuget\packages\nlog.config\4.7.11\contentFiles\any\any\NLog.config" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
-    <PackageReference Include="AWS.Logger.AspNetCore" Version="3.2.0" />
-    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.0.10" />
-    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.10" />
+    <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="3.1.0" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.101.4" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.100.69" />
+    <PackageReference Include="NLog.Database" Version="5.1.1" />
     <PackageReference Include="NLog.Slack" Version="2.0.0" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
