--- a/book-a-reading-room-visit.web/nlog.config
+++ b/book-a-reading-room-visit.web/nlog.config
@@ -20,7 +20,7 @@
             >
 
       <field name="Machine Name" layout="${environment:ASPNETCORE_ENVIRONMENT}" />
-      <field name="Process Name" layout="api" />
+      <field name="Process Name" layout="web" />
     </target>
     <target xsi:type="Database"
             name="sqlServerTarget"
