--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -4,11 +4,29 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54671",
-      "sslPort": 44321
+      "applicationUrl": "http://localhost:5148",
+      "sslPort": 7140
     }
   },
   "profiles": {
+    "Port2": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7140;http://localhost:5148",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "RecordCopying_WebApi_URL": "http://localhost:82/RecordCopyingServiceAPI/",
+        "RecordCopying_Header": "services.nationalarchives.web.local",
+        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking",
+        "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit",
+        "AWS_PROFILE": "dev",
+        "AWS_REGION": "eu-west-2",
+        "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
+        "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -19,28 +37,10 @@
         "RecordCopying_Header": "services.nationalarchives.web.local",
         "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking",
         "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit",
-        "AWS_PROFILE": "devdsadmin",
+        "AWS_PROFILE": "dev",
         "AWS_REGION": "eu-west-2",
         "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
         "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
-      }
-    },
-    "book_a_reading_room_visit.api": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5050;http://localhost:5051",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "RecordCopying_WebApi_URL": "http://localhost:82/RecordCopyingServiceAPI/",
-        "RecordCopying_Header": "services.nationalarchives.web.local",
-        "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
-        "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging",
-        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking",
-        "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit",
-        "AWS_PROFILE": "devdsadmin",
-        "AWS_REGION": "eu-west-2"
       }
     }
   }
