--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -3,44 +3,44 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54606/book-a-reading-room-visit",
-      "sslPort": 44397
+      "applicationUrl": "http://localhost:5230/book-a-reading-room-visit",
+      "sslPort": 7289
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "Port1": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:7289;http://localhost:5230",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "https://localhost:44321/book-a-visit-api/",
-        "KBS_Root_Path": "/book-a-reading-room-visit",
+        "KBS_WebApi_URL": "https://localhost:7140/book-a-visit-api/",
+        "KBS_Root_Path": "/",
         "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
         "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
-        "AWS_PROFILE": "devdsadmin",
+        "AWS_PROFILE": "dev",
         "AWS_REGION": "eu-west-2",
         "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
         "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
       }
     },
-    "book_a_reading_room_visit.web": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5052;http://localhost:5053",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "https://localhost:44321/book-a-visit-api/",
+        "KBS_WebApi_URL": "https://localhost:7140/book-a-visit-api/",
         "KBS_Root_Path": "/book-a-reading-room-visit",
         "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
         "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
-        "AWS_PROFILE": "devdsadmin",
+        "AWS_PROFILE": "dev",
         "AWS_REGION": "eu-west-2",
         "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
         "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
