remove standard or bulk document order from booking confirmation email subject

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -27,7 +27,8 @@
     "AutoCancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
-    "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
+    "ConfirmationSubject": "Your visit on {0} is confirmed",
+    //"ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
     "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
     "DSDFromAddress": "Book a visit - The National Archives <noreply@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
