Upgraded the project to .NET 8.0 (LTS)

--- a/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
+++ b/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
@@ -1,17 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>book_a_reading_room_visit.model</RootNamespace>
-    <Description>Shared model for the Kew Booking System</Description>
-    <Product>ds-book-a-reading-room-visit.model</Product>
-    <Company>The National Archives</Company>
-    <Authors>The National Archives</Authors>
-    <Version>1.6.0</Version>
-    <RepositoryUrl>https://github.com/nationalarchives/ds-book-a-reading-room-visit</RepositoryUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.6.0.0</AssemblyVersion>
-    <FileVersion>1.6.0.0</FileVersion>
   </PropertyGroup>
 
 </Project>
