--- a/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
+++ b/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.401.24" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="NLog.Database" Version="5.3.4" />
+    <PackageReference Include="NLog.Slack" Version="2.0.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
