--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -17,12 +17,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "KBS_WebApi_URL": "http://ds-api.dev.local/book-a-visit-api/",
         "KBS_Root_Path": "/",
-        "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
-        "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
+        "AdvanceOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc",
+        "BulkOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
-        "AWS_PROFILE": "dev",
+        "AWS_PROFILE": "tna-dev",
         "AWS_REGION": "eu-west-2",
         "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
         "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
@@ -35,12 +35,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "KBS_WebApi_URL": "http://ds-api.dev.local/book-a-visit-api/",
         "KBS_Root_Path": "/book-a-reading-room-visit",
-        "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
-        "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
+        "AdvanceOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc",
+        "BulkOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
-        "AWS_PROFILE": "dev",
+        "AWS_PROFILE": "tna-dev",
         "AWS_REGION": "eu-west-2",
         "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/XX",
         "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=Logging"
