--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -37,5 +37,9 @@
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
     "InValidBulkOrderReminderSubject": "Reminder from The National Archives: Don't forget to complete your document order",
     "LoopSendDelay": "10"
+  },
+  "AWS": {
+    "Profile": "tna-dev",
+    "Region": "eu-west-2"
   }
 }
