Refactoring to remove runtime dependance on AWS infrastructure for development purposes.

--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -15,10 +15,10 @@
       "applicationUrl": "https://localhost:7289;http://localhost:5230",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "http://ds-api.dev.local/book-a-visit-api/",
+        "KBS_WebApi_URL": "https://localhost:7140/",
         "KBS_Root_Path": "/",
-        "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
-        "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
+        "AdvanceOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc",
+        "BulkOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
@@ -33,10 +33,10 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "http://ds-api.dev.local/book-a-visit-api/",
+        "KBS_WebApi_URL": "https://localhost:7140/",
         "KBS_Root_Path": "/book-a-reading-room-visit",
-        "AdvanceOrderServiceEndPoint": "http://10.113.120.42/AdvancedOrderService/AdvancedOrderService.svc",
-        "BulkOrderServiceEndPoint": "http://10.113.120.42/BulkOrdersService/BulkOrdersService.svc",
+        "AdvanceOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc",
+        "BulkOrderServiceEndPoint": "http://test-services.nationalarchives.web.local/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
