Introduced constant for parl archives prefix

--- a/book-a-reading-room-visit.web/nlog.config
+++ b/book-a-reading-room-visit.web/nlog.config
@@ -22,7 +22,7 @@
       <field name="Machine Name" layout="${environment:ASPNETCORE_ENVIRONMENT}" />
       <field name="Process Name" layout="web" />
     </target>
-    <target xsi:type="Database"
+    <!--<target xsi:type="Database"
             name="sqlServerTarget"
             connectionString ="(from environment variable)"
             commandText ="EXEC proc_insert_kbs_nlog_entry @level,  @custom_message, @ex_message, @stack_trace, @exception_type, @logger, @url">
@@ -33,7 +33,7 @@
       <parameter name="@exception_type" layout="${exception:format=type}" />
       <parameter name="@logger" layout="${logger}" />
       <parameter name="@url" layout="${aspnet-request-url}" />     
-    </target>
+    </target>-->
   </targets>
   <rules>
     <logger name="*" minlevel="Error" writeTo="slackTarget" >
